--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-  "python.analysis.extraPaths": ["./Helpers"]
+  "python.analysis.extraPaths": ["./Helpers"],
+  "workbench.activityBar.location": "side",
+  "workbench.colorTheme": "Default Dark Modern",
+  "workbench.preferredHighContrastColorTheme": "Abyss",
+  "editor.fontSize": 14
 }
